<resources>
    <string name="app_name">SecondNote</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="enter_Title">No Title!</string>
    <string name="title">Enter Title!</string>
    <string name="pin_title">Enter PIN</string>
    <string name="enter_here_hint">Enter here</string>
    <string name="gold_suggest">"Please create Pin!"</string>
    <string name="contentDescription1">"circle image 1"</string>
    <string name="contentDescription2">"circle image 2"</string>
    <string name="contentDescription3">"circle image 3"</string>
    <string name="contentDescription4">"circle image 4"</string>

</resources>
