<LinearLayout android:id="@+id/no_linear_main"
    android:layout_width="340dp"
    android:layout_height="320dp"
    android:layout_margin="20dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/my_lock_left"
    android:layout_marginEnd="@dimen/my_lock_right"
    android:layout_marginTop="@dimen/my_lock_top"

    android:paddingBottom="@dimen/dimen_10"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/dimen_10"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/no_linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_textview_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/pin_title"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/no_linear_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_circle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/contentDescription1"
                    android:src="@drawable/circle" />

                <ImageView
                    android:id="@+id/imageview_circle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/contentDescription2"
                    android:src="@drawable/circle" />

                <ImageView
                    android:id="@+id/imageview_circle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/contentDescription3"
                    android:src="@drawable/circle" />

                <ImageView
                    android:id="@+id/imageview_circle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/contentDescription4"
                    android:src="@drawable/circle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:hint="@string/enter_here_hint"
                android:textAlignment="center"
                android:textColor="@color/note_list_text"
                android:textSize="22sp"
                android:visibility="visible" />


        </LinearLayout>
    </LinearLayout>

